# agent-bridge

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  POSITIONING.md  PRINCIPLES.md  README.md  STYLE_GUIDE.md  USER_FLOW.md  install.ps1  install.sh  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: tests.yml
.hermes/plans/: 2026-05-16_0130-setup-redesign.md  2026-05-21_142000-website-landing-page.md
adapters/: hermes.yaml  openclaw.yaml
cli/: bridge
core/: __init__.py  adapters.py  channel_hub.py  channel_protocol.py  context_manager.py  events.py  lock.py  mcp_server.py  poll.py  protocol.py  room_state.py  rooms.py  runtime.py  scheduler.py  security.py  send.py  storage.py
core/adapters/: __init__.py  _legacy.py  base.py  chat_runtime.py  cli.py  file_mailbox.py  (+4 more)
docs/: ARCHITECTURE.md  CHANNEL.md  CUSTOMIZE.md  GETTING_STARTED.md  SETUP.md  agent_bridge_dev_分支架构改造审查报告.md  agent_bridge_当前版本现状与后续优化清单.html  agent_bridge_当前版本现状与后续优化清单.md  agent_bridge_架构改造方案.md
integrations/: channel_connector.py
protocol/: SPEC.md
setup/: linux.sh  macos.sh
tests/: test_adapter_registry_room.py  test_adapters_v2.py  test_archive.py  test_channel_hub.py  test_context_manager.py  test_cursor.py  test_events.py  test_integration.py  test_poll.py  test_protocol.py  test_rooms.py  test_runtime.py  test_scheduler.py  test_security.py  test_send.py  test_server.py  test_storage.py  test_v2_runtime_hardening.py  test_wakeup.py
ui/: app.js  config.py  discovery.py  index.html  mcp_manager.py  poll_manager.py  routes.py  server.py  style.css
(+3 files in other folders)
